<resources>
    <string name="app_name">My Pain Diary</string>
    <string name="nav_title_entries">Records</string>
    <string name="nav_title_reports">Report</string>
    <string name="nav_title_others">Others</string>
    <string name="frg_entries_title">My Pain Diary</string>
    <string name="frg_reports_title">My Pain Diary - Reports</string>
    <string name="frg_others_title">My Pain Diary - Others</string>
    <string name="frg_description_list_title">Description list</string>
    <string name="frg_location_list_title">Location list</string>
    <string name="frg_entries_empty_list">Entries list is empty</string>
    <string name="view_entries_item_button_save">Save</string>
    <string name="viewEntriesItemLocationHint">Location</string>
    <string name="view_entries_item_description">Description</string>
    <string name="viewEntriesItemNote">Note</string>
    <string name="view_entries_item_button_location_list_text">Location list</string>
    <string name="view_entries_item_button_descript_list_text">Descript list</string>
</resources>
