<?xml version="1.0" encoding="utf-8"?>
<navigation
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/nav_graph"
        app:startDestination="@id/nav_entries">

    <fragment
            android:id="@+id/nav_entries"
            android:name="cz.ciompa.frantisek.mylifeinpain.entries.EntriesView"
            android:label="@string/frg_entries_title"
            tools:layout="@layout/view_entries">

        <action
                android:id="@+id/action_entriesFrg_to_reportsFrg"
                app:destination="@id/nav_reports"/>
        <action
                android:id="@+id/action_nav_entries_to_viewOthers"
                app:destination="@id/nav_others"/>
    </fragment>

    <fragment
            android:id="@+id/nav_reports"
            android:name="cz.ciompa.frantisek.mylifeinpain.reports.ViewReports"
            android:label="@string/frg_reports_title"
            tools:layout="@layout/view_reports"/>

    <fragment
            android:id="@+id/nav_others"
            android:name="cz.ciompa.frantisek.mylifeinpain.others.ViewOthers"
            android:label="@string/frg_others_title"
            tools:layout="@layout/view_others">

        <action
                android:id="@+id/action_nav_others_to_nav_description_list"
                app:destination="@id/nav_description_list"/>

        <action
                android:id="@+id/action_nav_others_to_nav_location_list"
                app:destination="@id/nav_location_list"/>

    </fragment>

    <fragment
            android:id="@+id/nav_description_list"
            android:name="cz.ciompa.frantisek.mylifeinpain.description.frgDescriptionList"
            android:label="@string/frg_description_list_title"
            tools:layout="@layout/view_description_list"/>

    <fragment
            android:id="@+id/nav_location_list"
            android:name="cz.ciompa.frantisek.mylifeinpain.location.frgLocationList"
            android:label="@string/frg_location_list_title"
            tools:layout="@layout/view_location_list"/>

</navigation>